# backend/public/swagger.json
@@ -6,11 +6,26 @@
 		"requestBodies": {},
 		"responses": {},
 		"schemas": {
+			"Status": {
+				"enum": [
+					0,
+					1,
+					2,
+					3
+				],
+				"type": "number"
+			},
 			"AuthResponse": {
 				"properties": {
 					"id": {
 						"type": "number",
 						"format": "double"
+					},
+					"name": {
+						"type": "string"
+					},
+					"status": {
+						"$ref": "#/components/schemas/Status"
 					},
 					"token": {
 						"type": "string"
@@ -22,6 +37,8 @@
 				},
 				"required": [
 					"id",
+					"name",
+					"status",
 					"token",
 					"expiresIn"
 				],
@@ -49,15 +66,6 @@
 					0,
 					1,
 					2
-				],
-				"type": "number"
-			},
-			"Status": {
-				"enum": [
-					0,
-					1,
-					2,
-					3
 				],
 				"type": "number"
 			},
@@ -169,6 +177,19 @@
 					"name",
 					"messages",
 					"users"
+				],
+				"type": "object",
+				"additionalProperties": false
+			},
+			"LogoutInput": {
+				"properties": {
+					"id": {
+						"type": "number",
+						"format": "double"
+					}
+				},
+				"required": [
+					"id"
 				],
 				"type": "object",
 				"additionalProperties": false
@@ -316,8 +337,7 @@
 					"content": {
 						"application/json": {
 							"schema": {
-								"type": "number",
-								"format": "double"
+								"$ref": "#/components/schemas/LogoutInput"
 							}
 						}
 					}
@@ -383,6 +403,27 @@
 			}
 		},
 		"/api/users": {
+			"get": {
+				"operationId": "GetUsers",
+				"responses": {
+					"200": {
+						"description": "user entity",
+						"content": {
+							"application/json": {
+								"schema": {
+									"items": {
+										"$ref": "#/components/schemas/User"
+									},
+									"type": "array"
+								}
+							}
+						}
+					}
+				},
+				"description": "Get a user based on userId provided",
+				"security": [],
+				"parameters": []
+			},
 			"put": {
 				"operationId": "UpdateUser",
 				"responses": {
