# backend/src/auth/auth.controller.ts
@@ -1,8 +1,9 @@
-import {NextFunction, Request, Response} from 'express';
-import {AuthUserInput} from '../requests/authuser.input';
+import { NextFunction, Request, Response } from 'express';
+import { AuthUserInput } from '../requests/authuser.input';
 import AuthService from './auth.service';
 import { SocketServer } from '../utils/socketServer';
 import OnlineStatusResponse from '../responses/onlinestatus.response';
+import { LogoutInput } from '../requests/logout.input';
 
 export default class AuthController {
   authService: AuthService;
@@ -29,7 +30,7 @@ export default class AuthController {
     try {
       const authUserInput: AuthUserInput = req.body;
       const authResponse = await this.authService.loginUser(authUserInput);
-      const onlineStatusResponse = new OnlineStatusResponse(authResponse.id, true);
+      const onlineStatusResponse = new OnlineStatusResponse(authResponse.id, authResponse.name, authResponse.status, true);
       SocketServer.io.emit("online status", onlineStatusResponse);
       res.send(authResponse);
     } catch (err) {
@@ -39,9 +40,9 @@ export default class AuthController {
 
   async logoutUser(req: Request, res: Response, next: NextFunction) {
     try {
-      const userId: number = req.body;
-      const user = await this.authService.logoutUser(userId);
-      const onlineStatusResponse = new OnlineStatusResponse(user.id, false);
+      const logoutInput: LogoutInput = req.body;
+      const user = await this.authService.logoutUser(logoutInput);
+      const onlineStatusResponse = new OnlineStatusResponse(user.id, user.username, user.status, false);
       SocketServer.io.emit("online status", onlineStatusResponse);
       res.send(user);
     } catch (err) {
