# backend/src/requests/logout.input.ts
@@ -1,0 +1,3 @@
+export interface LogoutInput {
+    id: number;
+}
